Update artifact upload paths to multiline format

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -57,4 +57,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: mlflow-logs
-          path: ./mlruns || ./logs || path/to/artifacts
+          path: |
+            ./mlruns
+            ./logs
+            path/to/artifacts
